mazanoke/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mazanoke
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: mazanoke
