mazanoke/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mazanoke
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`img-convert.simulatan.me`)
      services:
        - name: mazanoke
          port: 80
      middlewares:
        - name: redirect-to-https
          namespace: default
